<resources>

    <string name="main_activity_name">All Tasks</string>
    <string name="add_task_activity_name">Add a New Task</string>
    <string name="settings">Settings</string>

    <string name="app_name">Todo List</string>
    <string name="tv_edit_task_title">Edit Task</string>
    <string name="tv_update_task_title">Update Task</string>
    <string name="action_save">Save Task</string>

    <!-- Strings related to settings -->
    <string name="label_action_settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="all_task">All Tasks</string>
    <string name="task_by_priority">Tasks by Priority</string>
    <string name="task_by_due_date">Tasks by Due Date</string>
    <string name="task_completed">Tasks Completed</string>
    <string name="delete_task_completed">Delete Completed Tasks</string>
    <string name="delete_all_task"> Delete all</string>

    <!-- Dialog message -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="warning_delete_all">Are you sure you want to delete all tasks?</string>
    <string name="discard_delete_all">Discard</string>
    <string name="yes_delete_all_tasks">Yes</string>



    <!-- Strings for MainActivity -->
    <string name="priority_1">1</string>
    <string name="priority_2">2</string>
    <string name="priority_3">3</string>
    <string name="share_task">Share Task</string>
    <string name="add_task">Add Task</string>


    <!-- Strings for AddTaskActivity -->
    <!-- This etaskEntrytask has a unicode character for "..." = "&#8230;" -->
    <string name="edit_task_title">Enter task title&#8230;</string>
    <string name="edit_task_description">Describe your taskEntry&#8230;</string>
    <string name="priority_string">Priority</string>

    <string name="high_priority">High</string>
    <string name="med_priority">Medium</string>
    <string name="low_priority">Low</string>

    <string name="add_button">Add</string>
    <string name="update_button">Update</string>

    <string name="has_no_due_date">No due date</string>
    <string name="set_date">Enter due date</string>
    <string name="select_due_date">Select due date</string>
    <string name="save_task">Save Task</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a new Task</string>


    <!-- Pref related settings -->
    <string name="pref_sort_by_label">Sort By</string>
    <string name="pref_sort_by_label_priority">Priority</string>
    <string name="pref_sort_by_label_due_date">Due Date</string>
    <string name="pref_sort_by_label_completed">Completed</string>
    <string name="pref_sort_by_key" translatable="false">sort</string>
    <string name="pref_sort_by_default_value" translatable="false">due_date</string>
    <string name="pref_sort_by_due_date_value" translatable="false">due_date</string>
    <string name="pref_sort_by_priority_value" translatable="false">priority</string>
    <string name="pref_sort_by_completed_value" translatable="false">completed</string>
    <string name="add_widget">Add widget</string>

    <string name="error_message">An error has occured. Please try again by clicking REFRESH</string>

    <!-- Notification strings -->
    <string name="charging_reminder_notification_title">Anything to add....</string>
    <string name="charging_reminder_notification_body">Lets add a new task...</string>
    <string name="main_notification_channel_name">Primary</string>

    <!-- Ads -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_id">ca-app-pub-3940256099942544/1033173712</string>
</resources>
