<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_settings"
        android:title="@string/label_action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/completed_task"
        android:title="@string/task_completed"
        android:orderInCategory="200"
        app:showAsAction="never"/>

    <item
        android:id="@+id/delete_all_task"
        android:title="@string/delete_all_task"
        android:orderInCategory="300"
        app:showAsAction="never"/>

    <item
        android:id="@+id/sign_out_menu"
        android:title="@string/sign_out"
        android:orderInCategory="400"
        app:showAsAction="never"/>

</menu>