<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arunditti.android.todolist.ui.activities.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        style="AppTheme.AppBarOverlay"
        android:elevation="4dp"
        tools:ignore="UnusedAttribute">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:titleTextColor="@color/white"
            app:layout_scrollFlags="scroll|enterAlways">

            <Spinner
                android:id="@+id/spinner_main_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:overlapAnchor="false"/>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <!--RecyclerView for holding list of tasks-->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_tasks_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/rv_padding_top"
        android:scrollbars="vertical">
    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/tv_error_message_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/error_message"
        android:textSize="@dimen/text_size"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_height="42dp"
        android:layout_width="42dp"
        android:layout_gravity="center"
        android:visibility="invisible" />


    <!-- Empty view for the list -->
    <RelativeLayout
    android:id="@+id/empty_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <ImageView
    android:id="@+id/empty_shelter_image"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:src="@drawable/ic_empty_shelter"
        android:contentDescription="@string/empty_view_title_text"/>

    <TextView
    android:id="@+id/empty_title_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/empty_shelter_image"
    android:layout_centerHorizontal="true"
    android:fontFamily="sans-serif-medium"
    android:paddingTop="16dp"
    android:text="@string/empty_view_title_text"
    android:textAppearance="?android:textAppearanceMedium"/>

    <TextView
    android:id="@+id/empty_subtitle_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/empty_title_text"
    android:layout_centerHorizontal="true"
    android:fontFamily="sans-serif"
    android:paddingTop="8dp"
    android:text="@string/empty_view_subtitle_text"
    android:textAppearance="?android:textAppearanceSmall"
    android:textColor="#A2AAB0"/>
    </RelativeLayout>
    </FrameLayout>

    <!-- Floating action button that launches AddTaskActivity when clicked -->
    <android.support.design.widget.FloatingActionButton
    android:id="@+id/fab"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|end"
    android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:focusable="true"
    app:srcCompat="@android:drawable/ic_input_add"
    android:tint="@android:color/white"/>

</android.support.design.widget.CoordinatorLayout>